--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,11 @@ h1, h2, h3, h4, h5, h6, figure {
   -o-transition: 0s;
   transition: 0s;
 }
+
+#youtube-audio1:hover {
+  cursor: pointer;
+}
+
 .fh5co-nav ul li.has-dropdown .dropdown:before {
   bottom: 100%;
   left: 40px;
